2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-parse.yy (class stdio_stream_reader): Disallow copying.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (gnuplot_toolkit::redraw): Call __gnuplot_drawnow__,
	not gnuplot_drawnow.
	(gnuplot_toolkit::print_figure): Likewise.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* Makefile.am (OCTAVE_LIBS): Remove $(ARPACK_LDFLAGS) and
	$(ARPACK_LIBS) from the list.
	(DLD-FUNCTIONS/eigs.df): Don't add $(ARPACK_CPPFLAGS) to CPPFLAGS.
	(DLD_FUNCTIONS_eigs_la_CPPFLAGS): Remove $(ARPACK_CPPFLAGS) from
	the list.
	(DLD_FUNCTIONS_eigs_la_LIBADD): Remove $(ARPACK_LDFLAGS) and
	$(ARPACK_LIBS) from the list.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* load-save.cc (Fload): Doc fix.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/__init_fltk__.cc (fltk_gui_mode, fltk_mouse_wheel_zoom):
	Improve docstrings.

	* graphics.cc (available_graphics_toolkits): Fix typo in docstring.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* syscalls.cc (S_ISSOCK, S_ISCHR): Improve docstrings

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* dirfns.cc (readdir, filesep, pathsep): Improve docstrings
	* file-io.cc (tmpnam): Improve docstring
	* input.cc (filemarker): Improve docstring
	* syscalls.cc (stat, lstat): Improve docstring

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/getrusage.cc, toplev.cc: Improve docstring

2011-01-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__fltk_uigetfile__.cc (__fltk_uigetfile__):
	Don't allocate Fl_File_Chooser object with new.  Delete unused
	variable fargs.  Allocate default retval values in initial
	declaration.

2011-01-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__init_fltk__.cc: Undefine Complex after
	including FLTK headers.
	* DLD-FUNCTIONS/__fltk_uigetfile__.cc: Likewise.

2011-01-29  John W. Eaton  <jwe@octave.org>

	* Makefile.am (__fltk_uigetfile__): Use the same compiler flags
	as for __init_fltk__.
