@@ -1,3 +1,8 @@
+2011-01-30  John W. Eaton  <jwe@octave.org>
+
+	* txt-eng-ft.cc (ft_manager::ft_manager): Omit fc_init_done from
+	initialization list if fontconfig is missing.
+
 2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
 
 	* oct-parse.yy (class stdio_stream_reader): Disallow copying.
